--- a/app/views/user_mailer/first_monthly_email.html.erb
+++ b/app/views/user_mailer/first_monthly_email.html.erb
@@ -7,16 +7,14 @@
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
       <div>
-        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;"><%= Date::MONTHNAMES[current_time.month] + " " + current_time.year %> Rebalance</h3>
-        <p>Thanks again for signing up!  If you've already updated your allocations according to the welcome email you received in April, you're all set for this month.<sup>*</sup>  Your next rebalance will be on <%= Date::MONTHNAMES[(current_time.month + 1) % 12] %> 1.</p>
-        <p style="font-style: italic; font-size: 70%;">* If you didn't get a chance to update your allocations in April, you can <a href="<%= 'http://www.msft401k.com/users/resend?email=' + @email %>">rebalance to the May allocations</a> now.</p>
-        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Questions</h3>
-        <p>We've been getting a lot of great questions.  Check out the <a href="http://www.msft401k.com/faq">FAQ</a>.  If you have any other questions, drop us a line: <a href="mailto:team@MSFT401k.com">team@msft401k.com</a>.</p>
-        <br /><hr />
-        <div style="font-size: 80%; font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;">
-          <p><a href="http://www.msft401k.com/faq">FAQ</a> | <a href="mailto:team@MSFT401k.com">Contact Us</a> | <a href="http://www.msft401k.com/terms">Terms</a> | <a href="http://www.msft401k.com/unsubscribe">Unsubscribe</a></p>          
-          <p>Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable. It is recommended that you consult a stockbroker or financial advisor before buying or selling securities, or making any investment decisions.</p>
-        </div>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;"><%= Date::MONTHNAMES[current_time.month] + " " + current_time.year.to_s %> Rebalance</h3>
+        <p>Thanks again for signing up!  If you've already updated your allocations according to the welcome email you received in <%= Date::MONTHNAMES[(current_time.month - 1) % 12] %>, you're all set for this month.<sup>*</sup>  Your next rebalance will be on <%= Date::MONTHNAMES[(current_time.month + 1) % 12] %> 1.</p>
+        <p style="font-style: italic; font-size: 70%;">* If you didn't get a chance to update your allocations in <%= Date::MONTHNAMES[(current_time.month - 1) % 12] %>, you can <a href="<%= 'http://www.msft401k.com/users/resend?email=' + @email %>">rebalance to the <%= Date::MONTHNAMES[(current_time.month) % 12] %> allocations</a> now.</p>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Questions?</h3>
+        <p>Check out the <a href="http://www.msft401k.com/faq">FAQ</a> or drop us a line: <a href="mailto:team@MSFT401k.com">team@msft401k.com</a>.</p>
+
+        <%= render 'layouts/email_footer' %>
+
       </div>
     </div>
   </body>
