--- a/app/views/users/resend.html.erb
+++ b/app/views/users/resend.html.erb
@@ -1,15 +1,16 @@
 <%= render 'layouts/header_other' %>
+<% current_time = Time.now %>
 
 <div id="poster">
 	<div id="header-background"></div>
 	<div class="content">
-		<h1>May Allocations Sent!</h1>
+		<h1><%= Date::MONTHNAMES[(current_time.month)] %> Allocations Sent!</h1>
 	</div>
 </div>
 
 <div id="main-terms">
 	<div class="content">
-        <p>We just sent you the May allocations.  Look for in your <%= params[:email] %> inbox.</p>
+        <p>We just sent you the <%= Date::MONTHNAMES[(current_time.month)] %> allocations.  Look for in your <%= params[:email] %> inbox.</p>
         <p>Can't find the email?  We'll <a onclick="$('#status_msg').text('Email resent.');" href="<%= '/users/' + User.find_by_email(params[:email].downcase).id.to_s %>" data-remote="true" data-type="json">resend</a> it. <span id="status_msg" style="color: #666666; font-style: italic;"><span></p>
         <p>Questions? Drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
 	</div>
