--- a/app/views/user_mailer/first_monthly_email.html.erb
+++ b/app/views/user_mailer/first_monthly_email.html.erb
@@ -1,4 +1,4 @@
-<% current_time = Time.now %>
+<% current_time = Time.now.in_time_zone('America/Los_Angeles') %>
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,7 +9,7 @@
       <div>
         <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;"><%= Date::MONTHNAMES[current_time.month] + " " + current_time.year.to_s %> Rebalance</h3>
         <p>Thanks again for signing up!  If you've already updated your allocations according to the welcome email you received in <%= Date::MONTHNAMES[(current_time.month - 1) % 12] %>, you're all set for this month.<sup>*</sup>  Your next rebalance will be on <%= Date::MONTHNAMES[(current_time.month + 1) % 12] %> 1.</p>
-        <p style="font-style: italic; font-size: 70%;">* If you didn't get a chance to update your allocations in <%= Date::MONTHNAMES[(current_time.month - 1) % 12] %>, you can <a href="<%= 'http://www.msft401k.com/users/resend?email=' + @email %>">rebalance to the <%= Date::MONTHNAMES[(current_time.month) % 12] %> allocations</a> now.</p>
+        <p style="font-style: italic; font-size: 70%;">* If you didn't get a chance to update your allocations in <%= Date::MONTHNAMES[(current_time.month - 1) % 12] %>, you can <a href="<%= 'http://www.msft401k.com/users/resend?email=' + @email %>">rebalance to the <%= Date::MONTHNAMES[(current_time.month)] %> allocations</a> now.</p>
         <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Questions?</h3>
         <p>Check out the <a href="http://www.msft401k.com/faq">FAQ</a> or drop us a line: <a href="mailto:team@MSFT401k.com">team@msft401k.com</a>.</p>
 
