add not affiliated with microsoft blurb to footers

--- a/app/views/layouts/_email_footer.html.erb
+++ b/app/views/layouts/_email_footer.html.erb
@@ -2,4 +2,5 @@
         <div style="font-size: 80%; font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;">
           <p><a href="http://www.msft401k.com/faq">FAQ</a> | <a href="mailto:team@MSFT401k.com">Contact Us</a> | <a href="http://www.msft401k.com/terms">Terms</a> | <a href="http://www.msft401k.com/unsubscribe">Unsubscribe</a></p>          
           <p>Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable. It is recommended that you consult a stockbroker or financial advisor before buying or selling securities, or making any investment decisions.</p>
+          <p>This site is not affiliated with, sponsored by, or maintained by Microsoft or the Microsoft Corporation Savings Plus 401(k) Plan.</p>
         </div>
