--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,7 +37,7 @@
 
 		<%= form_for (@user = User.new) do |f| %>
 		  <div class="signup-form">
-		    <%= f.text_field :email, 
+		    <%= f.email_field :email, 
 		    :id => "user_email",
 		    :class => "form-text-field",
 		    :placeholder => "enter your email",
