rebrand to Optimal 401k and change user report to DESC

--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -10,7 +10,7 @@
 <div id="main-terms">
 	<div class="content">
 		<h2>Thank You!</h2>
-		<p><em>We've been getting a lot of great questions.  We'll do our best to keep this page updated, so please keep the questions coming! Drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</em></p>
+		<p><em>We've been getting a lot of great questions.  We'll do our best to keep this page updated, so please keep the questions coming! Drop us a line: <a href="mailto:team@optimal401k.com">team@optimal401k.com</a>.</em></p>
 		<div id="faq">
 			<div class="hashanchor" id="question-top"></div>
 			<h2>Questions</h2>
@@ -33,7 +33,7 @@
 			</div>
 			<div class="hashanchor" id="question-1"></div>
 			<h3>Who is Vest Me, LLC?</h3>
-			<p>Vest Me, LLC is the registered entity responsible for the MSFT401k.com domain and service.  Currently, MSFT401k.com is our only offering, but we may release other products and services in the future.  We chose the name Vest Me because our vision is to empower people to invest their own money with confidence.</p>
+			<p>Vest Me, LLC is the registered entity responsible for the Optimal 401k domain and service.  Currently, Optimal 401k is our only offering, but we may release other products and services in the future.  We chose the name Vest Me because our vision is to empower people to invest their own money with confidence.</p>
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 			<div class="hashanchor" id="question-2"></div>
 			<h3>Are you registered financial advisors?</h3>
@@ -49,7 +49,7 @@
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 			<div class="hashanchor" id="question-5"></div>
 			<h3>What's in it for you?  How will you make money?</h3>
-			<p>MSFT401k.com is a free service, and we receive no compensation for running it.  Our focus right now is on building the best service possible to help Microsoft 401k plan participants, but we may release other products and services in the future for a fee.</p>
+			<p>Optimal 401k is a free service, and we receive no compensation for running it.  Our focus right now is on building the best service possible to help Microsoft 401k plan participants, but we may release other products and services in the future for a fee.</p>
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 			<div class="hashanchor" id="question-6"></div>
 			<h3>Don't you need to know my age to adjust for how many years I have left until retirement?</h3>
