--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,8 +27,8 @@
 		<div class="error-div">
 			<% if notice == "SIGNUP_ERROR_EMAIL_EMPTY" %><%= "Enter your email address to sign up." %>
 			<% elsif notice == "SIGNUP_ERROR_EMAIL_INVALID" %><%= "Please enter a valid email address to sign up."%>
-			<% elsif notice == "SIGNUP_ERROR_UNKNOWN" %><%= "Something unusual happened.  We're looking into it.  Send us an email and tell us what happened: "%><a style="color: white; text-decoration: underline;" href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.
-			<% else %><%= "Something superbly unusual happened.  We're looking into it.  Send us an email and tell us what happened: "%><a  style="color: white; text-decoration: underline;" href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.
+			<% elsif notice == "SIGNUP_ERROR_UNKNOWN" %><%= "Something unusual happened.  We're looking into it.  Send us an email and tell us what happened: "%><a style="color: white; text-decoration: underline;" href="mailto:team@optimal401k.com">team@optimal401k.com</a>.
+			<% else %><%= "Something superbly unusual happened.  We're looking into it.  Send us an email and tell us what happened: "%><a  style="color: white; text-decoration: underline;" href="mailto:team@optimal401k.com">team@optimal401k.com</a>.
 			<% end %>
 		</div>
 		<% elsif %>
@@ -63,7 +63,7 @@
 	<div class="content">
 		<div class="main-section">
 			<div class="hashanchor-special" id="why"></div>
-			<h2>Why MSFT401k</h2>
+			<h2>Why Optimal 401k</h2>
 			<p>You're probably already contributing money into your Microsoft 401k.  If you're like most people we talked to, you set up the contribution amount a long time ago and hardly look at it, if ever!  But you can do better in just 5 minutes a month.</p>
 			<p style="font-style: italic; font-size: 80%;">P.S.  If you're not already contributing money to your 401k, you should strongly consider it to save for retirement and take advantage of the <a href="http://careers.microsoft.com/careers/en/us/benefits-and-perks.aspx">401k match benefit</a> offered by Microsoft.</p>
 			<h3>Why It Matters</h3>
@@ -99,8 +99,8 @@
 			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/OurReturns.png" alt="Our Returns" />
 			<br />
 			<span style="font-style: italic; font-size: 80%;">
-				** Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable.<br /><br />
-				<strong>MSFT401k.com:</strong> our strategy, which adjusts allocations monthly based on market risk.<br />
+				** Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by Optimal 401k will be profitable.<br /><br />
+				<strong>Optimal 401k:</strong> our strategy, which adjusts allocations monthly based on market risk.<br />
 				<strong>Equal Weight:</strong> equal distribution among 8 top funds diversified across typical asset classes.<br />
 				<strong>S&amp;P 500:</strong> Standard &amp; Poor's 500 index, which approximates "the stock market."<br />
 				<strong>60/40 (Stocks/Bonds):</strong> monthly rebalancing to 60% stocks and 40% bonds.<br />
@@ -111,7 +111,7 @@
 		<div class="hashanchor" id="vision"></div>
 		<div class="main-section">
 			<h2>Vision</h2>
-			<p>We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are setting out to build a product that we want first, and we think it will help our friends and coworkers.</p>
+			<p>We started Optimal 401k because we couldn’t find a decent way to invest our own money. We are setting out to build a product that we want first, and we think it will help our friends and coworkers.</p>
 			<p>We believe in an alternate and better way of investing money in our 401k. We believe risk should be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds (stable) depending on market conditions.  And, of course, we use it ourselves.</p>
 		</div>
 		<div class="hashanchor" id="who"></div>
