--- a/app/views/home/stepbystep.html.erb
+++ b/app/views/home/stepbystep.html.erb
@@ -35,7 +35,7 @@
 			<img width="740" src="assets/stepbystep/Step6.png" alt="Step 6" />
 		</div>
 		<div class="white-box">
-			<h3>Step 7: enter percentages sent in email from <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a> and click 'Begin Rebalance'</h3>
+			<h3>Step 7: enter percentages sent in email from <a href="mailto:team@optimal401k.com">team@optimal401k.com</a> and click 'Begin Rebalance'</h3>
 			<img width="740" src="assets/stepbystep/Step7.png" alt="Step 7" />
 		</div>
 		<div class="white-box">
