--- a/app/views/layouts/_header_other.html.erb
+++ b/app/views/layouts/_header_other.html.erb
@@ -1,8 +1,7 @@
 <header id="header">
 	<div class="content">
 		<div id="logo" onclick="window.location.replace('/');" style="cursor: pointer;">
-			<div id="logo-line-1">MSFT401k</div>
-			<div id="logo-line-2">by Vest Me</div>			
+			<div id="logo-line-1">Optimal 401k</div>
 		</div>
 
 		<div id="navbar">
