--- a/app/views/user_mailer/regular_monthly_email.html.erb
+++ b/app/views/user_mailer/regular_monthly_email.html.erb
@@ -8,7 +8,7 @@
     <div id="main">
       <div>
         <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;"><%= Date::MONTHNAMES[current_time.month] + " " + current_time.year.to_s %> Rebalance</h3>
-        <p>Here are this month's allocations.  You should complete this rebalance as soon as you can using our <a href="http://www.msft401k.com/stepbystep">step-by-step instructions</a>.  Questions? Check out the <a href="http://www.msft401k.com/faq">FAQ</a> or drop us a line: <a href="mailto:team@MSFT401k.com">team@msft401k.com</a>.</p>
+        <p>Here are this month's allocations.  You should complete this rebalance as soon as you can using our <a href="http://www.optimal401k.com/stepbystep">step-by-step instructions</a>.  Questions? Check out the <a href="http://www.optimal401k.com/faq">FAQ</a> or drop us a line: <a href="mailto:team@optimal401k.com">team@optimal401k.com</a>.</p>
 
         <%= render 'layouts/allocations' %>
 
