add question-16 for past returns

--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -30,6 +30,7 @@
 				<p><a class="smoothscroll" href="#question-13" onclick="top_link_scroll('question-13')">How big are the changes in allocations from month to month?</a></p>
 				<p><a class="smoothscroll" href="#question-14" onclick="top_link_scroll('question-14')">Why do you tell me to direct all my future contributions into what is essentially cash?</a></p>
 				<p><a class="smoothscroll" href="#question-15" onclick="top_link_scroll('question-15')">What if I currently have money in MSFT or BrokerageLink?</a></p>
+				<p><a class="smoothscroll" href="#question-16" onclick="top_link_scroll('question-16')">What are your annual returns for the past few years?</a></p>
 			</div>
 			<div class="hashanchor" id="question-1"></div>
 			<h3>Who is Vest Me, LLC?</h3>
@@ -64,7 +65,7 @@
 			<h3>How do you determine the monthly allocations?</h3>
 			<p>The goal of the strategy is to maximize returns per unit of risk.</p>
 			<ol style="padding-left: 60px; padding-right: 60px;">
-				<li class="faq-li-item">We start with a basket of funds.  We choose funds with low management fees and diversify among several asset classes: Large Cap Domestic Stock, Small Cap Domestic Stock, International Stock, and Bonds.</li>
+				<li class="faq-li-item">We start with a basket of funds.  We choose funds with low management fees and diversify among several asset classes: Large Cap Domestic Stock, Small/Mid Cap Domestic Stock, International Stock, and Bonds.</li>
 				<li class="faq-li-item">Next, we measure and track market risk using price volatility: higher volatility means higher risk.</li>
 				<li class="faq-li-item">Then, we choose allocations among the asset classes to maximize returns per unit of risk.</li>
 			</ol>
@@ -99,6 +100,21 @@
 			<div class="hashanchor" id="question-15"></div>
 			<h3>What if I currently have money in MSFT or BrokerageLink?</h3>
 			<p>In the Microsoft 401k Plan, the MSFT common stock and BrokerageLink options are essentially managed as separate accounts.  As such, you will first have to move money out of those, and then rebalance as a second step.</p>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-16"></div>
+			<h3>What are your annual returns for the past few years?</h3>
+			<p>The Optimal 401k product seeks to maximize returns per unit of risk.  The industry standard for measuring this concept is known as the <a href="http://en.wikipedia.org/wiki/Sharpe_ratio">Sharpe ratio</a>.  Below is a table showing the Sharpe ratio of our product and other relevant benchmarks over the past 10 years. <span style="font-style: italic; color: #888888;">(Negative Sharpe ratios are <a href="http://investor.financialcounsel.com/Articles/Investment/ARTINV0000130-SharpeRatio.asp">modified per Israelsen.</a>)</span></p>
+			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/SharpeRatios.png" alt="Sharpe Ratios" />
+			<br />
+			<span style="font-style: italic; font-size: 80%;">
+				<strong>Sharpe Ratios:</strong> annual performance of our product and pertinent benchmarks compared using Sharpe ratios calculated from simulated performance.<br />
+			</span>
+			<p>Also, if you're interested in seeing our absolute returns, they are shown in the table below.  You'll notice that the current (conservative) Optimal 401k product performs particularly well in times of high volatility (like in 2002 and 2008); however, because the current strategy takes on a relatively small amount of risk, it does not participate as aggressively in the recovery periods (like in the recovery after the financial crisis).  Ultimately, this results in a straighter, more predictable return line, and overall better returns because of significantly less asset loss in the risky and volatile periods in early 2000s and 2008.  But, we understand that some customers want to take on more risk, so we will soon be releasing two new products (moderate and aggressive) to address this need.  Stay tuned!</p>
+			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/AbsoluteReturns.png" alt="Absolute Returns" />
+			<br />
+			<span style="font-style: italic; font-size: 80%;">
+				<strong>Absolute Returns:</strong> simulated annual absolute returns for our product and pertinent benchmarks.<br />
+			</span>
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 		</div>
 	</div>
