add link for sending test emails automatically

--- a/app/views/allocations/index.html.erb
+++ b/app/views/allocations/index.html.erb
@@ -10,6 +10,10 @@
 <% end %>
 </table>
 
+<br />
+<h1>Send Emails</h1>
+<%= link_to "Send Test Emails", send_test_emails_allocations_path, :remote => true, :onclick => "alert('Test Emails Started!')" %>
+
 <style>
 body {
   padding: 20px;
