add new strategy

--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -20,9 +20,9 @@
 				<p><a class="smoothscroll" href="#question-3" onclick="top_link_scroll('question-3')">Why do you need my email address, and how will it be used?</a></p>
 				<p><a class="smoothscroll" href="#question-4" onclick="top_link_scroll('question-4')">If I sign up, will you be able to see what's in my Microsoft 401k account?</a></p>
 				<p><a class="smoothscroll" href="#question-5" onclick="top_link_scroll('question-5')">What's in it for you?  How will you make money?</a></p>
-				<p><a class="smoothscroll" href="#question-6" onclick="top_link_scroll('question-6')">Don't you need to know my age to adjust for how many years I have left until retirement?</a></p>
-				<p><a class="smoothscroll" href="#question-7" onclick="top_link_scroll('question-7')">Are you saying age doesn't matter when it comes to investing?</a></p>
 				<p><a class="smoothscroll" href="#question-8" onclick="top_link_scroll('question-8')">How do you determine the monthly allocations?</a></p>
+				<p><a class="smoothscroll" href="#question-7" onclick="top_link_scroll('question-7')">What's the difference between the conservative and aggressive strategies?</a></p>
+				<p><a class="smoothscroll" href="#question-6" onclick="top_link_scroll('question-6')">Don't you need to know my age to adjust for how many years I have left until retirement?</a></p>
 				<p><a class="smoothscroll" href="#question-9" onclick="top_link_scroll('question-9')">How do you account for transaction costs and short-term trading fees?</a></p>
 				<p><a class="smoothscroll" href="#question-10" onclick="top_link_scroll('question-10')">Why do you recommend rebalancing monthly?</a></p>
 				<p><a class="smoothscroll" href="#question-11" onclick="top_link_scroll('question-11')">Is it safe to rebalance monthly?  What about round trip restrictions?</a></p>
@@ -52,15 +52,6 @@
 			<h3>What's in it for you?  How will you make money?</h3>
 			<p>Optimal 401k is a free service, and we receive no compensation for running it.  Our focus right now is on building the best service possible to help Microsoft 401k plan participants, but we may release other products and services in the future for a fee.</p>
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<div class="hashanchor" id="question-6"></div>
-			<h3>Don't you need to know my age to adjust for how many years I have left until retirement?</h3>
-			<p>Our current offering is a moderate strategy that aims to maximize returns per unit of risk, which we believe is a good strategy for 401k accounts regardless of age.  Because your 401k assets are the foundation for your retirement, being a bit on the conservative side is not so bad.  But, we may release more aggressive strategies in the future for those who want to take on more risk.</p>
-			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<div class="hashanchor" id="question-7"></div>
-			<h3>Are you saying age doesn't matter when it comes to investing?</h3>
-			<p>Not at all &mdash; of course, age matters.  When you are younger, you have many years ahead of you where you will be earning money.  That's kind of like having a large portion of your overall assets automatically allocated to bonds.  As you move closer to retirement, moving more money into bonds is generally recommended to offset the fact that you have fewer years left where you will be earning money.</p>
-			<p>But, that is for general investment. We are targeting the 401k, which is a slightly different ball game.  For example, each year, you are limited in the amount you can contribute to your 401k.  Also, gains grow on a tax-deferred basis, and there are no transaction fees.  We believe we have a strategy that works well particularly for 401k accounts regardless of age.</p>
-			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 			<div class="hashanchor" id="question-8"></div>
 			<h3>How do you determine the monthly allocations?</h3>
 			<p>The goal of the strategy is to maximize returns per unit of risk.</p>
@@ -69,6 +60,14 @@
 				<li class="faq-li-item">Next, we measure and track market risk using price volatility: higher volatility means higher risk.</li>
 				<li class="faq-li-item">Then, we choose allocations among the asset classes to maximize returns per unit of risk.</li>
 			</ol>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-7"></div>
+			<h3>What's the difference between the conservative and aggressive strategies?</h3>
+			<p>The underlying fundamentals of both strategies are the same, seeking to maximize returns per unit of risk.  The difference is that the aggressive strategy takes on more risk.  In practice, that means the aggressive strategy will typically have less allocation to bonds.</p>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-6"></div>
+			<h3>Don't you need to know my age to adjust for how many years I have left until retirement?</h3>
+			<p>Instead of having a formula like many other sites, we allow you to choose the strategy that you feel is best according to your risk tolerance level.  To be sure, age does matter in investing.  Generally speaking, when you are younger, you have many years ahead of you where you will be earning money.  That's kind of like having a large portion of your overall assets automatically allocated to bonds.  As you move closer to retirement, moving more money into bonds is generally recommended to offset the fact that you have fewer years left where you will be earning money.  But since everyone's situation is different, we allow you to choose from our two offerings: conservative and aggressive.</p>
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 			<div class="hashanchor" id="question-9"></div>
 			<h3>How do you account for transaction costs and short-term trading fees?</h3>
