--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -95,12 +95,13 @@
 		<div class="hashanchor" id="returns"></div>
 		<div class="main-section">
 			<h2>Our Returns</h2>
-			<p>Check out our returns against five other common investment strategies, both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against huge dips and have a smoother return.<sup>**</sup></p>
+			<p>Check out our returns against five other common investment strategies, both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against huge dips.<sup>**</sup></p>
 			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/OurReturns.png" alt="Our Returns" />
 			<br />
 			<span style="font-style: italic; font-size: 80%;">
 				** Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by Optimal 401k will be profitable.<br /><br />
-				<strong>Optimal 401k:</strong> our strategy, which adjusts allocations monthly based on market risk.<br />
+				<strong>Optimal 401k (Conservative):</strong> our conservative strategy.<br />
+				<strong>Optimal 401k (Conservative):</strong> our aggressive strategy.<br />
 				<strong>Equal Weight:</strong> equal distribution among 8 top funds diversified across typical asset classes.<br />
 				<strong>S&amp;P 500:</strong> Standard &amp; Poor's 500 index, which approximates "the stock market."<br />
 				<strong>60/40 (Stocks/Bonds):</strong> monthly rebalancing to 60% stocks and 40% bonds.<br />
@@ -118,11 +119,11 @@
 		<div class="main-section">
 			<div class="three-column-div three-column-margin">
 			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
-				<p>Joe Ollis is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
+				<p>Joe Ollis is a former Microsoft employee, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
 			</div>
 			<div class="three-column-div three-column-margin">
 			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Gary.jpg" alt="Gary" /></div>
-				<p>Gary Voronel is also a Microsoftie.  He's also a web development nerd, and he'll talk your ear off about the benefits of a plant-based diet.</p>
+				<p>Gary Voronel is a Microsoftie and a web development nerd.  He'll also talk your ear off about the benefits of a primarily plant-based diet.</p>
 			</div>
 			<div class="three-column-div">
 			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Xavier.jpg" alt="Xavier" /></div>
