--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,7 +101,7 @@
 			<span style="font-style: italic; font-size: 80%;">
 				** Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by Optimal 401k will be profitable.<br /><br />
 				<strong>Optimal 401k (Conservative):</strong> our conservative strategy.<br />
-				<strong>Optimal 401k (Conservative):</strong> our aggressive strategy.<br />
+				<strong>Optimal 401k (Aggressive):</strong> our aggressive strategy.<br />
 				<strong>Equal Weight:</strong> equal distribution among 8 top funds diversified across typical asset classes.<br />
 				<strong>S&amp;P 500:</strong> Standard &amp; Poor's 500 index, which approximates "the stock market."<br />
 				<strong>60/40 (Stocks/Bonds):</strong> monthly rebalancing to 60% stocks and 40% bonds.<br />
