update custom note for get the word out mail

--- a/app/views/user_mailer/custom_note_email.html.erb
+++ b/app/views/user_mailer/custom_note_email.html.erb
@@ -5,7 +5,16 @@
   </head>
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
-      PLACEHOLDER
+      	<p>Hello Optimal 401k Subscribers!</p>
+
+		<p>We need your help!  Having just released the aggressive strategy and updating our annual returns, we want to get the word out to as many Microsoft employees as we can.  Here’s you can help:</p>
+
+		<p>1. Like us on Facebook: <a href="https://www.facebook.com/optimal401k">https://www.facebook.com/optimal401k</a><br />
+		2. Like our Facebook post announcing the page: <a href="https://www.facebook.com/optimal401k/posts/10102871188342353">https://www.facebook.com/optimal401k/posts/10102871188342353</a><br />
+		3. Tell some friends about us in whatever way you feel comfortable (post to your own blog, send a message to an alias, casual chat with a friend, anything!)</p>
+
+		<p>Thank you for helping us get the word out!!<br />
+		The Optimal 401k Team</p>
     </div>
   </body>
 </html>
